MacViews: Anchor bubbles according to the MD spec.

MD bubbles no longer use arrows. Instead the top outer-side corner of
the bubble should align with the bottom outer-side corner of the
location bar decoration.

BUG=657263

Review-Url: https://codereview.chromium.org/2524223002
Cr-Commit-Position: refs/heads/master@{#435206}

Former-commit-id: e917fcdbb7701c1abc3c42d5d08ef8bf347b22ad