chrome/browser/ui/cocoa/location_bar/autocomplete_text_field_cell.h
@@ -65,10 +65,16 @@ class LocationBarDecoration;
 - (CGFloat)availableWidthInFrame:(const NSRect)frame;
 
 // Return the frame for |aDecoration| if the cell is in |cellFrame|.
-// Returns |NSZeroRect| for decorations which are not currently
-// visible.
+// Returns |NSZeroRect| for decorations which are not currently visible.
 - (NSRect)frameForDecoration:(const LocationBarDecoration*)aDecoration
                      inFrame:(NSRect)cellFrame;
+
+// Returns the frame representing the background of |decoration|. Also sets
+// |isLeftDecoration| according to whether the decoration appears on the left or
+// the right side of the text field.
+- (NSRect)backgroundFrameForDecoration:(LocationBarDecoration*)decoration
+                               inFrame:(NSRect)cellFrame
+                      isLeftDecoration:(BOOL*)isLeftDecoration;
 
 // Returns true if it's okay to drop dragged data into the view at the
 // given location.
